--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=hibernate-spring-boot-utc-timezone
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/screenshotdb?useLegacyDatetimeCode=false
